# spike-ai-buildx-hackathon

./: .env.example  .gitignore  FIXES_APPLIED.md  PATH_FIX_SUMMARY.md  README.md  deploy.bat  deploy.sh  pyproject.toml  requirements.txt  test_services.py  update_prompt.py  verify_chat.py  verify_llm.py  verify_paths.py
src/: __init__.py  main.py
src/agents/: __init__.py  analytics_agent.py  seo_agent.py
src/api/: __init__.py  models.py  routes.py
src/config/: ga4_schema.py  settings.py
src/orchestrator/: __init__.py  intent_detector.py  orchestrator.py  response_builder.py
src/services/: ga4_service.py  llm_service.py  sheets_service.py
src/utils/: retry.py  validators.py
